Fixed overflow in appbar popup for the avatar

--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -51,6 +51,9 @@
     }
   }
 }
+.avatar-popup {
+  max-height: none;
+}
 
 .searchBtn {
   display: none;
